stylesheet/main.css
/* ... */
/*-------x----------------End of Navigation for all websites----------------------------x---*/



/*--------------------Start of home page--------------------*/

/* background colour */

.bg-active {
  background-color: #fff;
}

/* about page text fade in*/

.about-me {
  opacity: 0;
  transform: translateY(20px);
  transition: 0.5s all ease-in-out;
}

.about-appear {
  opacity: 1;
  transform: translateY(0px);
}

/*-------More about me button------*/
/*--------CODE FROM https://codepen.io/lookingforsome/pen/oLJkoO-----*/
.svg-wrapper {
  margin-top: 8px;

}

.shape {
  stroke-dasharray: 141 539;
  stroke-dashoffset: -473.5;
  stroke-width: 20px;
  fill: transparent;
  stroke: rgb(1, 91, 209);
  transition: stroke-width 2s, stroke-dashoffset 2s, stroke-dasharray 2s;
}

.text {
  font-weight: 300;
  color: rgb(1, 91, 209);
  font-size: 22px;
  line-height: 3px;
  letter-spacing: 8px;
  top: -48px;
  left: 38px;
  stroke: rgb(1, 91, 209);
  position: relative;

}

/*--animation for button----*/
.svg-wrapper:hover .shape {
  stroke-width: 5px;
  stroke-dashoffset: 0;
  stroke-dasharray: 760;
}

/*----x---More about me button---x---*/



/*-------------Start of main text------------- */


.hero {
  max-width: 1335px;
  margin: 0 auto;
  overflow: auto;
  min-height: 100%;
  padding: 14rem 0;
  position: relative;
}

/*-- hello text --*/
.ifrah1{
  font-size: 100px;
  font-weight: 900;
  letter-spacing: 8px;
}


.hero-content {
  margin: 0px 60px;
  font-size: 95px;
  font-weight: 600;
  color: #ffffff;
  line-height: 8rem;
  letter-spacing: 4px;
}


/*--inspired by https://codepen.io/pugson/pen/EwmKJp----*/
.text-highlight {
  width: 580px;
  height: 38px;
  top: 482px;
  position: absolute;
  margin-left: 30rem;
  z-index: -1;

  background-image:
    linear-gradient(-100deg,
      rgba(0, 26, 255, 0.15),
      rgb(0, 26, 255) 100%,
      rgba(0, 26, 255, 0.438));
}

/*--------x-----End of main text-----x--------*/


/*-------------social media icons--------------*/
.media {
  position: absolute;
  right: 0;
  bottom: 0;
  margin: 2em;
  z-index: 2;
}

.media ul {
  list-style: none;
}

.media ul li {
  padding: 10px 0;
}


/*---------------------RESPONSIVENESS/MEDIA QUERIES FOR HOME PAGE--------------------------*/

/*-------------HOME PAGE CONTENT------------- */

@media only screen and (max-width: 375px) {

  .header .logo{
    font-size: 2rem;
  }

  .ifrah1{
    font-size: 40px;
    font-weight: 900;
    letter-spacing: 2px;
    text-align: center;
  }
  .hero-content {
    font-size: 28px;
    line-height: 4rem;
    letter-spacing: 2px;
    text-align: center;
  }
  .shape{
    display: none;
  }
  
  .text {
    margin-top:60px;
    margin-left: -70px;
    color: rgb(1, 91, 209);
    font-size: 22px;
    line-height: 3px;
    letter-spacing: 4px;
    stroke: rgb(1, 91, 209);
    position: relative;
    padding: 20px 30px;
    border-radius: 20px;
    text-align: center; 
    justify-content: center;
  }
  .hero {
    padding-top: 150px;
  }
  .text-highlight {
    width: 250px;
    height: 14px;
    top: 420px;
    margin: 1px;
    position: absolute;
    background:blue
  }

}

/*-----------X----------END OF RESPONSIVENESS/MEDIA QUERIES FOR HOME PAGE--------X------------------*/






/*----------------------START OF PORTFOLIO PAGE ------------------------*/
/*--PAGE LAYOUT----*/
.container {
  padding-top: 90px;
  max-width: 1335px;
  margin: 0 auto;
  overflow: auto;
  min-height: 100%;
}

/*-------MAIN TEXT---------*/
.portfolio-title h1 {
  color: rgb(17, 16, 16);
  font-size: 50px;
}

.portfolio-title p {
  color: rgb(17, 16, 16);
  font-size: 30px;
  font-weight: 300;
  width: 80%;
}

.portfolio-title {
  margin-right: 200px;
  margin-left: 20px;
}

.project-name {
  color: rgb(29, 76, 231);
  font-weight: 300;
}

.project-name:hover {
  color: rgb(17, 16, 16);
  font-weight: 300;
}



/*--------GRID LAYOUT----------*/
.grid-row {
  padding-top: 20px;
  display: flex;
  flex-flow: row wrap;
  justify-content: flex-start;
}

.grid-item {

  height: 650px;
  flex-basis: 30%;
  -moz-box-flex: auto;
  width: 29px;
  position: relative;
  padding: 24px;
  box-sizing: border-box;
}

.grid-row a {
  text-decoration: none;
}

.grid-item-wrapper {
  border-radius: 10px;
  -webkit-box-sizing: initial;
  -moz-box-sizing: initial;
  box-sizing: initial;
  background: #f3f3f3;
  margin: 0;
  height: 100%;
  width: 100%;
  overflow: hidden;
  -webkit-transition: padding 0.15s cubic-bezier(0.4, 0, 0.2, 1), margin 0.15s cubic-bezier(0.4, 0, 0.2, 1), box-shadow 0.15s cubic-bezier(0.4, 0, 0.2, 1);
  transition: padding 0.15s cubic-bezier(0.4, 0, 0.2, 1), margin 0.15s cubic-bezier(0.4, 0, 0.2, 1), box-shadow 0.15s cubic-bezier(0.4, 0, 0.2, 1);
  position: relative;
}

.grid-item-container {
  height: 120%;
  width: 100%;
  position: relative;
}

.grid-image-top {
  height: 54%;
  width: 130%;
  background-size: cover;
  position: relative;
  background-position: 5% 50%;
  left: -10.5%;
  top: -4.5%;
}

.grid-image-top .centered {
  text-align: center;
  transform: translate(-50%, -50%);
  background-size: contain;
  background-repeat: no-repeat;
  position: relative;
  display: block;
  top: 54.5%;
  left: 50%;
  width: 0%;
  height: 5%;
  background-position: center;
}

.grid-image-top {
  background: rgb(47, 248, 228);
}

.grid-item-content {
  padding: 0 17px 17px 17px;
}

.item-title {
  font-size: 24px;
  line-height: 26px;
  font-weight: 700;
  margin-bottom: 18px;
  display: block;
}

.item-category {
  text-transform: uppercase;
  display: block;
  margin-bottom: 55px;
  font-size: 14px;
}

.links1 {
  display: inline-block;
  list-style: none;
  padding-right: 25px;
}

.grid-item:hover .more-info i {
  padding-left: 20px;
  transition-duration: .5s;
}

.more-info i::before {
  font-size: 16px;
}

.grid-item:hover .grid-item-wrapper {
  padding: 4% 4%;
  margin: -4% -4%;
}

/*-- IMAGES INSIDE THE GRID----*/
.port-image {
  width: 70%;
  padding: 30% 0 0 12%;
}
/* ... */

